--- a/Round1Log.html
+++ b/Round1Log.html
@@ -11,8 +11,12 @@
 </head>
 <body class="markdown-body">
 <h1 id="100-days-of-code---log-1" data-line="0" class="code-line">100 Days Of Code - Log</h1>
-<h3 id="day-1-june-20-2020-1" data-line="2" class="code-line">Day 1: June 20, 2020</h3>
-<p data-line="4" class="code-line"><strong>Today's Progress</strong>: Created the Frontend and APIservice containers and linked them together using docker-compose. Created a basic proof of concept of being able to download npm packages by using React-D3-Tree. Started linking the frontend together and will handle the basic homepage.</p>
-<p data-line="6" class="code-line"><strong>Thoughts:</strong> Struggled with containerizing the react application because of a bug in the latest version of react-scripts (3.4.1). Also, tried to find some free mock-up resources on sketchappresources but it seems difficult to find some that are minimal but modern.</p>
+<h3 id="day-2-june-21-2020-1" data-line="2" class="code-line">Day 2: June 21, 2020</h3>
+<p data-line="4" class="code-line"><strong>Today's Progress</strong>: Created a basic navbar styled with CSS. Downloaded node-sass to integrate SCSS with my React project. Utilizing the CSS modules paradigm for better code organization. Included fonts using webfontloader package (works really well).</p>
+<p data-line="6" class="code-line"><strong>Thoughts:</strong> I struggled with the different syntax with SCSS. It was a very slight difference from traditional CSS which made it harder to debug (strings don't exist in scss files). The webfontloader package that I utilized for the Roboto Mono font works super well and was integrated very easily.</p>
+<p data-line="8" class="code-line"><strong>Link to work:</strong> <a href="https://github.com/bkbranden/CrystariumTree/tree/d317f4d92f53facc9d1b044b03fc480aea82d20e" data-href="https://github.com/bkbranden/CrystariumTree/tree/d317f4d92f53facc9d1b044b03fc480aea82d20e">Current Commit</a></p>
+<h3 id="day-1-june-20-2020-1" data-line="10" class="code-line">Day 1: June 20, 2020</h3>
+<p data-line="12" class="code-line"><strong>Today's Progress</strong>: Created the Frontend and APIservice containers and linked them together using docker-compose. Created a basic proof of concept of being able to download npm packages by using React-D3-Tree. Started linking the frontend together and will handle the basic homepage.</p>
+<p data-line="14" class="code-line"><strong>Thoughts:</strong> Struggled with containerizing the react application because of a bug in the latest version of react-scripts (3.4.1). Also, tried to find some free mock-up resources on sketchappresources but it seems difficult to find some that are minimal but modern.</p>
 
 </body></html>
